[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/InfoPanels/TryInfoPanel/Try_Info_Panel.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://GUI/fonts/Caliban.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = SubResource( 1 )

[node name="TryInfoPanel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -569.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 711.0
margin_bottom = 600.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Details" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Details"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Details/ScrollContainer"]
margin_right = 703.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Details/ScrollContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 683.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="NameLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 663.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = SubResource( 2 )
text = "Try 1"

[node name="StatusLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 663.0
margin_bottom = 48.0
text = "Status:   Finished"

[node name="ClientLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 663.0
margin_bottom = 66.0
text = "Client:   T-Rex_1"

[node name="TimeStartedLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 663.0
margin_bottom = 84.0
text = "Started:   25.6.2018 11:45"

[node name="TimeStoppedLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 663.0
margin_bottom = 102.0
text = "Finished:   25.6.2018 11:45"

[node name="TimeNeededLabel" type="Label" parent="TabContainer/Details/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 663.0
margin_bottom = 120.0
text = "Rendertime:   25s"

[node name="Log" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_clip_content = true

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Log"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Log_RichTextLabel" type="RichTextLabel" parent="TabContainer/Log/MarginContainer"]
margin_right = 703.0
margin_bottom = 564.0
focus_mode = 2
bbcode_enabled = true
scroll_following = true
selection_enabled = true
[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="gui_input" from="TabContainer/Log/MarginContainer/Log_RichTextLabel" to="." method="_on_Log_RichTextLabel_gui_input"]
